<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/centralizeable_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Money: 1200" />

    <Button
        android:id="@+id/go_to_boats"
        style="@style/mainMenuButton"
        android:background="@color/b1"
        android:text="@string/boats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/money" />


    <Button
        android:id="@+id/go_to_oars"
        style="@style/mainMenuButton"
        android:background="@color/b2"
        android:text="@string/oars"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/go_to_boats" />

    <Button
        android:id="@+id/go_to_rowers"
        style="@style/mainMenuButton"
        android:background="@color/b3"
        android:text="@string/rowers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/go_to_oars" />

    <Button
        android:id="@+id/go_to_legends"
        style="@style/mainMenuButton"
        android:background="@color/b4"
        android:text="@string/legends"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/go_to_rowers" />

    <Button
        android:id="@+id/go_to_new_pair"
        style="@style/mainMenuButton"
        android:background="@color/b5"
        android:text="@string/new_pairs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/go_to_legends" />

    <Button
        android:id="@+id/go_to_existing_pairs"
        style="@style/mainMenuButton"
        android:background="@color/b6"
        android:text="@string/trainings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/go_to_new_pair" />

    <TextView
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/day_with_instruction" />

    <Button
        android:id="@+id/give_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/give_money"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>