<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/oar_item_height"
    android:layout_marginVertical="@dimen/padding"
    android:background="?android:attr/selectableItemBackground">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/oar_blade_picture_size"
        android:layout_height="@dimen/oar_item_height"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/logo_croker" />

    <ImageView
        android:id="@+id/blade_image"
        android:layout_width="@dimen/oar_blade_picture_size"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/logo"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/blade_macon" />

    <TextView
        android:id="@+id/manufacturer"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/model"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        tools:text="@string/manufacturer" />

    <TextView
        android:id="@+id/model"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/blade"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manufacturer"
        tools:text="@string/model" />

    <TextView
        android:id="@+id/blade"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/weight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/model"
        tools:text="Лопасть: Double Wing" />

    <TextView
        android:id="@+id/weight"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/damage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blade"
        tools:text="@string/item_weight" />

    <TextView
        android:id="@+id/damage"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight"
        tools:text="@string/damage" />

    <TextView
        android:id="@+id/cost"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buyOar"
        app:layout_constraintTop_toTopOf="@+id/weight"
        tools:text="@string/cost" />

    <Button
        android:id="@+id/buyOar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/blade_image" />

    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/blade_image"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="П" />
</androidx.constraintlayout.widget.ConstraintLayout>